cmake_minimum_required (VERSION 2.6)
project(Honoka)
set(CMAKE_CXX_COMPILER "clang++")
set(PROJECT_SOURCE_DIR "./src")
set(TEST_SOURCE_DIR "./test")
SET( CMAKE_BUILD_TYPE Debug )
set(CMAKE_LINK_LIBRARY_FLAG "${CMAKE_LINK_LIBRARY_FLAG}pthread -l ")
aux_source_directory(${PROJECT_SOURCE_DIR} CPPS)

add_subdirectory("${PROJECT_SOURCE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/3rd party/glog/include")
ADD_DEFINITIONS("-std=c++11")
#link_directories("${PROJECT_SOURCE_DIR}/3rd party/glog/lib")
add_executable(Honoka ${TEST_SOURCE_DIR}/test.cpp ${CPPS})
target_link_libraries(Honoka glog)

